# cx_freeze_test

./: pyproject.toml  setup.py
cx_freeze_test/: application.py  main.py
tests/: test_cx_freeze_test.py
